# ClientServerSSL

./: .gitignore  CMakeLists.txt  README.md  READMEeng.md  READMEru.md
client/: CMakeLists.txt  main.cpp
data/: test0.json  test1.json  test2.json  test3.json  test4.json  test5.json
mylib/: CMakeLists.txt
mylib/include/mylib/: client.hpp  server.hpp  session.hpp
mylib/src/: client.cpp  server.cpp  session.cpp
server/: CMakeLists.txt  main.cpp
